Sun Beams Node artifacts #72583

Closed
opened 2019-12-19 20:14:36 +01:00 by Joshua Golde · 8 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-18 22:47, hash: da6929488a
Worked: (optional)

Short description of error
Artifacts appearing with the Sun Beams Node in the compositor
Annotation 2019-12-19 195050.png

Exact steps for others to reproduce the error
Take a black and white image, put that into the compositor and add the Sun Beams node before the viewer/composite node
Annotation 2019-12-19 1958204.png
composition.blend

tried to put in different file formats, from jpg to exr, uncompressed to compressed files,... still these artifacts.
Sadly i can´t up the samples to get rid of these artifacts.

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-18 22:47, hash: `da6929488a` Worked: (optional) **Short description of error** Artifacts appearing with the Sun Beams Node in the compositor ![Annotation 2019-12-19 195050.png](https://archive.blender.org/developer/F8234901/Annotation_2019-12-19_195050.png) **Exact steps for others to reproduce the error** Take a black and white image, put that into the compositor and add the Sun Beams node before the viewer/composite node ![Annotation 2019-12-19 1958204.png](https://archive.blender.org/developer/F8234908/Annotation_2019-12-19_1958204.png) [composition.blend](https://archive.blender.org/developer/F8234911/composition.blend) tried to put in different file formats, from jpg to exr, uncompressed to compressed files,... still these artifacts. Sadly i can´t up the samples to get rid of these artifacts.
Author

Added subscriber: @Josh-Gmit

Added subscriber: @Josh-Gmit

Added subscribers: @LukasTonne, @mano-wii

Added subscribers: @LukasTonne, @mano-wii

Sum Beans was implemented in blender/blender-staging@e15cdec2d4
@LukasTonne, is this a bug or a limitation?

Sum Beans was implemented in blender/blender-staging@e15cdec2d4 @LukasTonne, is this a bug or a limitation?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @Rigoletto

Added subscriber: @Rigoletto

The noise occurs for render passes to, tested with 2.93.1, looks like precision errors for me.
sun_beams_noise.blend

grafik.png

The noise occurs for render passes to, tested with 2.93.1, looks like precision errors for me. [sun_beams_noise.blend](https://archive.blender.org/developer/F10649041/sun_beams_noise.blend) ![grafik.png](https://archive.blender.org/developer/F10649069/grafik.png)

This issue was referenced by 5b9a911c4b

This issue was referenced by 5b9a911c4b3c888e80e314a987e34642eb317310

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Manuel Castilla self-assigned this 2021-10-15 23:20:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72583
No description provided.