Fix T72583: Sun Beams node artifacts

The artifacts are due to the loss of precision when doing some
calculations with float precision.